crates/openracing-profile/tests/snapshots/snapshot_tests__advanced_settings_default.snap
---
source: crates/openracing-profile/tests/snapshot_tests.rs
expression: "AdvancedSettings::default()"
---
{
  "filter_enabled": false,
  "filter_strength": 0.5,
  "led_mode": "Default",
  "telemetry_enabled": true
}
