crates/openracing-profile/tests/snapshots/snapshot_tests__limit_settings_default.snap
---
source: crates/openracing-profile/tests/snapshot_tests.rs
expression: "LimitSettings::default()"
---
{
  "max_speed": null,
  "max_temp": 80,
  "emergency_stop": true
}
